# python-project-49

./: Makefile  README.md  brain_calc.cast  pyproject.toml
asciinema_rec/: brain_even.cast  brain_gcd.cast  brain_prime.cast  brain_progression.cast
brain_games/: brain_main.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain.even.py  brain_even.py  brain_games.py
