[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["romant1k <d.romant1k@mail.ru>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[flake8]
accept-encodings = utf-8
max-complexity = 6
statistics = False
max-line-length = 80
enable-extensions = G
isort-show-traceback = True

exclude = .git,__pycache__,.venv,dist,build

ignore =
  # line break occurred before a binary operator
  W503

per-file-ignores =
  # init modules can contain the local imports, logic, unused imports
  __init__.py: F401

[isort]
multi_line_output = 3
include_trailing_comma = true
default_section = FIRSTPARTY
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
